<resources>

    <string name="app_name">Quix</string>
    <string name="api_root">...</string>

    <string name="facebook_app_id">543247572498479</string>
    <string name="action_settings">Settings</string>

    <string name="login_entrance_student">Student</string>
    <string name="login_entrance_student_detail">To solve quizes that shared with you \nlogin from here</string>
    <string name="inapp_licence_key"></string>
    <string name="product_id"></string>

    <string name="login_entrance_teacher">Teacher</string>
    <string name="login_entrance_teacher_detail">To create quizes for your students \nlogin from here</string>

    <string name="dashboard">Dashboard</string>
    <string name="statistics">Statistics</string>
    <string name="results">Results</string>
    <string name="upgrade">Upgrade</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>

    <string name="start_quiz">Start Quiz</string>
    <string name="start_quiz_desc">Write given quiz id to input field below</string>

    <string name="purchase_title">Congratulations</string>
    <string name="purchase_message">You unlocked unlimited version of app, now you can take unlimited quiz</string>

    <string name="no_test_found">There is no quiz id in our database like you provided, please try again !</string>

    <string name="check_question">Check</string>

    <string name="wrong_answer">Wrong answer, please try again to find correct answer</string>
    <string name="correct_answer">Congratulations, correct answer !</string>

    <string name="attention_text">You need to drag and order items</string>

    <string name="dear_text">Dear</string>
    <string name="count_text">Correct Count :</string>
    <string name="time_text">Elapsed Time : </string>
    <string name="point_text">Score</string>
    <string name="name_input_text">For once please write your fullname here to take quizes !</string>
    <string name="name_hint_text">Your full name here</string>

    <string name="valid_name_error">Please enter valid Full Name</string>

    <string name="image_question">Image Question</string>

    <string name="share_title">Quix - Interactive Quiz App</string>
    <string name="share_message">Create 6 type of Quiz for your students, or enjoy solving quizes with beautiful interface. Hurry ! Your time is valuable for us, come and join Quix family. https://play.google.com/store/apps/details?id=</string>

    <string name="quiz_solved">Quiz Taken</string>
    <string name="question_solved">Question Solved</string>
    <string name="average_score">Average Score</string>
    <string name="correct_percent">Correct </string>
    <string name="average_time">Average Time</string>
    <string name="highest_score">Highest Score</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_desc">Statistics about your quizes</string>

    <string name="free_usage_warning">Free Usage Limit Reached</string>
    <string name="buy_text_1">- You reached end of your free usage limit</string>
    <string name="buy_text_2">- For a cup of coffee price, you can upgrade app</string>
    <string name="buy_text_3">- Only pay 0.99$ and get unlimited access to this awesome app</string>
    <string name="buy_negative">NO, THANKS</string>
    <string name="buy_positive">UPGRADE NOW</string>

    <string name="exit_title">Exit App</string>
    <string name="exit_message">Are you sure you want to exit from app ?</string>
    <string name="exit_positive">YES</string>
    <string name="exit_negative">NO</string>

    <string name="add_quiz_text">Add Quiz</string>
    <string name="add_image_text">Add Image</string>
    <string name="save_quiz">Save Quiz</string>
    <string name="update_quiz">Update Quiz</string>
    <string name="new_quiz">New Quiz</string>
    <string name="edit_quiz">Edit Quiz</string>
    <string name="add_question_text">Add Question</string>
    <string name="update_question_text">Update Question</string>
    <string name="update_answer_text">Update Answer</string>
    <string name="results_list">Results</string>
    <string name="share_list">Share</string>

    <string name="quiz_name_hint">Write your quiz name here</string>
    <string name="quiz_time_hint">Time here as minute or leave it empty </string>

    <string name="multiple_choice_title">Multiple Choice</string>
    <string name="multiple_choice_hint">Create quizes that can contain max 4 choice and min 2 choice, there should be only one correct answer for each question</string>
     <string name="multiple_correct_title">Multiple Correct</string>
    <string name="multiple_correct_hint">Create quizes that can contain max 4 choice and min 2 choice, there should be more than one correct for each question</string>
    <string name="fill_blank_title">Fill Blank</string>
    <string name="fill_blank_hint">Create quizes to make student predict missing word or choice</string>
    <string name="short_answer_title">Short Answer</string>
    <string name="short_answer_hint">Create quzies like everday exams</string>
    <string name="drag_order_title">Drag &amp; Order</string>
    <string name="drag_order_hint">Create quizes to make student place choices for correct order</string>
    <string name="match_title">Matching Choices</string>
    <string name="match_hint">Create quizes to make student match choices with correct answers</string>

    <string name="name_empty_error">You can not leave quiz name empty</string>
    <string name="type_empty_error">You need to select question type</string>

    <string name="question_empty_error">You can not leave question empty</string>
    <string name="question_onecorrect_error">You can not set more than one question as correct in this question type</string>
    <string name="question_onecorrect_atleast_error">At least you need to set one question as correct in this question type</string>
    <string name="question_match_empty_error">You can not leave match section for choice empty</string>
    <string name="atleast_two_choice_error">You need to fill at least 2 choice for question</string>

    <string name="delete_title">Delete</string>
    <string name="delete_message">Are you sure you want to delete this ?</string>

    <string name="add_question_hint">Write question here</string>
    <string name="add_question_feedback">Write general feedback here, this will be shown if your choices do not have feedbacks</string>

    <string name="add_choice_hint">Write choice here</string>
    <string name="add_choice_feedback">Write feedback about this choice here</string>
    <string name="add_match_hint">Write correct match for this choice here</string>

    <string name="correct_or_not">Is this choice correct ?</string>

    <string name="imagechoose">Is this choice correct ?</string>
    
    <array name="question_instructions">
        <item >Yönerge \n Multiple choice soru tipi nasıl doldurulmalıdır buraya yazacak</item>
        <item >Yönerge \n Multiple correct soru tipi nasıl doldurulmalıdır buraya yazacak</item>
        <item >Yönerge \n Fill Blank soru tipi nasıl doldurulmalıdır buraya yazacak</item>
        <item >Yönerge \n Drag &amp; Order soru tipi nasıl doldurulmalıdır buraya yazacak</item>
        <item >Yönerge \n Matching soru tipi nasıl doldurulmalıdır buraya yazacak</item>
        <item >Yönerge \n Short Answer soru tipi nasıl doldurulmalıdır buraya yazacak</item>
    </array>

    <string name="message_results_saved">Your results saved and quiz owner can see it now </string>

    <string name="label_add_first_question">Add first question to your quiz </string>
    <string name="label_create_first_quiz">Create your first quiz </string>
    <string name="label_no_exam_result">No exam result submitted yet</string>

    <string name="quiz_stats">Quiz Stats </string>
    <string name="question_stats">Question Stats </string>
    <string name="more_infromation">Click to learn more information about question evaluation</string>

    <string name="stats_average_score">Average Score </string>
    <string name="stats_average_time">Average Time </string>
    <string name="stats_average_student">Quiz Taken Count </string>

    <string name="first_try_percentage">Correct Percentage </string>
    <string name="second_try_percentage">Second Try Correct </string>
    <string name="third_try_percentage">Third Try Correct </string>

    <string name="teacher_feedback_normal">Congratulations.. This is a very good question. An average question should be correctly answered between 30 and 80 of students. </string>
    <string name="teacher_feedback_hard">This question needs revisions. A question correctly answered by less then 30 of students, it means this question is too hard for students. </string>
    <string name="teacher_feedback_easy">This question needs revisions. A question correctly answered by more then 80 of students, it means the question is too easy </string>
    <string name="student_take">student solved</string>
    <string name="second">second</string>
    <string name="exams">My Exams</string>

    <string name="share_id">Share ID</string>
    <string name="share_id_message">Share this ID with your students</string>
    <string name="copy_clipboard">Copy to clipboard</string>
    <string name="copied">Quiz ID copied, now share it with your friend and students</string>
    <string name="correct">correct</string>
    <string name="which_try">Which try user found correct answer : </string>

    <string name="question">Question : </string>
    <string name="correct_ans">Correct Answer : </string>
    <string name="first_ans">First Answer : </string>

    <string name="msg_quiz_not_found">There is no Quiz with given ID</string>

</resources>
